[tool.poetry]
name = "aw-watcher-openvpn"
version = "0.11.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"

[tool.poetry.scripts]
aw-watcher-openvpn = "aw_watcher_openvpn:main"

[tool.poetry.dependencies]
python = "^3.8"
# Installing them from here won't work
#aw-core = {path = "aw-core"}
#aw-client = {path = "aw-client"}
#aw-watcher-afk = {path = "aw-watcher-afk"}
#aw-watcher-window = {path = "aw-watcher-window"}
#aw-server = {path = "aw-server"}
#aw-qt = {path = "aw-qt"}


[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-benchmark = "*"
psutil = "*"
aw-client = "^0.5"


# Won't be respected due to https://github.com/python-poetry/poetry/issues/1584
#setuptools = ">49.1.1"  # needed due to https://github.com/pypa/setuptools/issues/1963

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
